make postprocess executable

--- a/troubleshoot_new_setupexpt.ipynb
+++ b/troubleshoot_new_setupexpt.ipynb
@@ -24,7 +24,7 @@
     "import matplotlib.pyplot as plt\n",
     "import shutil\n",
     "from pathlib import Path\n",
-    "# os.chdir(\"/home/149/ab8992/bottom_near_inertial_waves/automate_experiments\")\n",
+    "os.chdir(\"/home/149/ab8992/topographic-NIWs\")\n",
     "basepath = Path.cwd().absolute()\n",
     "\n",
     "import autolib as al\n",
@@ -53,9 +53,9 @@
     "\n",
     "### COMMON ACROSS ALL EXPERIMENTS. \n",
     "##########################################################\n",
-    "nlayers = 20             # number of layers\n",
+    "nlayers = 50             # number of layers\n",
     "Lx = 4000                # domain zonal extent [km]\n",
-    "Ly = 1000                # domain meridional extent [km]\n",
+    "Ly = 4000                # domain meridional extent [km]\n",
     "H  = 4000                # total fluid's depth in [m]\n",
     "gridspacing = 2          # in [km]\n",
     "flat = False\n",
@@ -1209,9 +1209,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "analysis",
+   "display_name": "Python [conda env:analysis3-24.01] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-analysis3-24.01-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1223,7 +1223,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
